# radiovier

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  main.py  package-lock.json  pyproject.toml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: TranscriptionItem.tsx  TranscriptionList.tsx
frontend/app/hooks/: useInfiniteScroll.ts
frontend/app/lib/: api.ts
frontend/hooks/: useAudioContext.tsx  useRelativeTime.tsx
frontend/lib/: api.ts
frontend/styles/: typing.css
frontend/types/: transcription.ts
